feat: take into account assembler level
