# openapi.yaml
@@ -5,7 +5,7 @@ info:
   contact:
     name: API Support
     email: alexnou@gmail.com
-  version: 0.5.1
+  version: 0.5.2
 servers:
 - url: https://alex-api.herokuapp.com
 tags:
@@ -189,13 +189,20 @@ components:
                   type: string
                 rate:
                   type: number
+                assemblerLevel:
+                  type: number
+                  example: 2
+                  default: 2
+                  enum: [1, 2, 3]
                 requirements:
                   type: object
                   additionalProperties:
+                    description: Which recipe to use
                     type: number
               example:
                 name: "Proliferator Mk.III"
                 rate: 2.0
+                assemblerLevel: 3
                 requirements:
                   "Carbon Nanotube": 1
   schemas:
